--- a/src/Components/data/project.json
+++ b/src/Components/data/project.json
@@ -51,10 +51,10 @@
     },
     {
       "title": "Game World - React",
-      "img": "https://353a23c500dde3b2ad58-c49fe7e7355d384845270f4a7a0a7aa1.ssl.cf2.rackcdn.com/5ee27cb150fcb70007332dec/screenshot.png",
+      "img": "https://353a23c500dde3b2ad58-c49fe7e7355d384845270f4a7a0a7aa1.ssl.cf2.rackcdn.com/5f126be3d1a690c7f8fce27f/screenshot.png",
       "alt": "Game World image",
       "linkhub": "https://github.com/kelvinramos125/react-ecommerce",
-      "link": "https://game-w0rld.netlify.app/"
+      "link": "https://km-game-world.netlify.app/"
     },
     {
       "title": "TechCrunch Redesign",
